# libs3dat

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  NOTICE  README  animation.c  cli.c  config.h.in  example_restype.c  gen_gui.c  invert.c  libs3dat.pc.in  s3datConfig.cmake.in  search.cpp  test.c  walk.c
src/: bitmap.c  exception.c  extract.c  ioset.c  read.c  s3dat.h  s3dat_ext.h  s3dat_internal.h  snd.c  string.c  structure.c  write.c
